-印刷用リンクを別ページで開く設定ができるようにしました。（Thanks to 手石]）
-コメント欄に{{&gt;}}等の実体参照文字列を書き込んだ時、そのまま表示されるように変更しました。（Thanks to 手石]）
-[g:respond.js]から[g:css3-mediaqueries.js]に変更しました。
-シンタックスハイライトのテーマを変更しました。またhighlight.jsのロード方法も変更しました。
-記法タグでの「google」や「wikipedia」のリンク先をhttpsに変更しました。GoogleのリンクQueryも少し変更しました。
-【テーマ】配色カスタマイズ画面で、色を濃くしたり明るくしたりできるようにしました。((色を薄くまたは暗くしかできなかったという（苦笑）))
-【テーマ】あらゆる出力から{<input type="submit">, <input type="button">}を廃止しました。
-【テーマ】satsuki2系テーマで、サイドバーサイズを固定にしました。
-【テーマ】satsuki2-multiside テーマを廃止してウィンドウ横幅によりマルチサイドバーにする satsuki2-resp に変更しました。
-【テーマ】CSSでの #hatena-body の高さ自動設定機能に min-height が効くようになりました。
-【テーマ】テーマの表示テスト画面を作りました。
-【テーマ】テーマの配色可変対応をより作りやすくしました。
-【テーマ】色々と問題の多い「JavaScriptによるBox高さの自動調整」をやめました。
-【fix】テーマ配色のリセット後、HSVバーを動かすと色基準が「現在のテーマ設定値」になっていた。
-【fix】adiary形式でexportするとき、入力テキストに「&lt;」などの実体参照が正しくエスケープされていなかった。((Version2時代からあったバグのようですのでたぶんずっと最初から……。))
-【fix】Version2からの移行ツール使用時、コンテンツのツリー構造がうまく引き継げない。
-【fix】pkey保存インポートをすると、コンテンツツリーを復元できない。
-【fix】その他の設定に、謎のデザインモジュール再インストールボタンがあった。
-【fix】行連結記法が使えない。((β3直後に完全にエンバグしてました。必要処理をなぜか１行削除するというコピペ操作ミスだと思われます、恥ずかしい（汗）))
-【fix】たまにタグ一覧やコンテンツ一覧でキャッシュされた情報を読み込んでしまう。
-【fix】Markdown記法でインラインのソースコード記述で、{<, >, &}がうまくエスケープされない。（Thanks to 手石]）
-【fix】Perl 5.20でMySQL, PostgreSQL運用時、データベースに格納される文字列が[em:通常のUTF8文字列にならない]。（[http://adiary.blog.abk.nu/0367:問題の詳細]）
-【fix】コメントが許可されていない FrontPage がある状態でデザイン編集を保存すると、コメント投稿フォームが消える。
-【fix】コメントメール通知プラグインが動かなくなっていた。
-【fix】ブラウザ上で「横320px」のスマートフォン（iPhone 5等）でスマホメニューの表示が崩れる。（[https://twitter.com/ave_sp/status/617230968248664064:Thanks to 阿部]）
-他多数

*Ver3.0β6 : 2015/05/17

-[bf:フッターの出力位置を変更しました]。
-記事編集画面から直接画像をアップロードできるようになりました。
-記事編集画面の入力部分にドラッグ＆ドロップしてファイルをアップロードできるようになりました。
-記事編集画面を洗練させました。
-FrontPage（固定トップページ）の時、記事タイトルをヘッダ出力しないように変更しました。
-システムモード非対応テーマを管理画面で使用しようとする時、警告を表示するようにした。
-表示パスワード機能やメンテナンスモードでの画面に、適切なHTTPステータスコードを設定した。
-スマホ判別に、BlackBerry と Windows Phone を加えました。
-コメント表示数の設定項目がなかったので修正。
-FrontPageのタイトル設定機能を追加。
-テーマを書きやすくするため、HTMLの出力構造を微修正しました。
-タグの編集、コンテンツ一覧の編集画面を少し使いやすくしました。