@@ -73,7 +73,9 @@ button {
 	margin-left:		2px;
 }
 .color-box input {
+	font-size:		13px;
 	width:			50px;
+	font-family:		monospace;
 }
 .ui-slider {
 	display:		inline-block;
