@@ -326,7 +326,7 @@ div.body-footer {
 
 .ui-widget-overlay {
 	background-color: #000;
-	filter:		alpha(opacity=25);
+	filter:		alpha(opacity=25);	/* for IE8 */
 	opacity:	0.25;
 }
 
@@ -723,13 +723,11 @@ h3.ui-accordion-header {
 /* sortable */
 .dynatree-title,
 .ui-sortable-handle {
-	cursor:			-moz-grab;
 	cursor:			-webkit-grab;
 	cursor:			grab;
 }
 .ui-sortable-handle.ui-sortable-helper {
-	cursor:			auto;
-	cursor:			-moz-grabbing;
+	cursor:			-webkit-grabbing;
 	cursor:			grabbing;
 }
 .ui-sortable-handle .no-drag {
