@@ -85,6 +85,19 @@ body
 	width:			612px;
 }
 
+/*--------------------------------------------------------------------
+■表示オプション（右サイドバー）
+---------------------------------------------------------------------*/
+/* $option=right-sidebar
+.main {
+	float:			left;
+	width:			calc(100% - 172px);
+}
+#sidebar {
+	float:			right;
+}
+$option=end */
+
 
 
 /****************************************************************************
