@@ -83,6 +83,17 @@ body
 	width:			612px;
 }
 
+/*--------------------------------------------------------------------
+■表示オプション（右サイドバー）
+---------------------------------------------------------------------*/
+/* $option=right-sidebar
+.main {
+	float:			left;
+}
+#sidebar {
+	float:			right;
+}
+$option=end */
 
 /*--------------------------------------------------------------------
 ■表示オプション（レスポンシブ、両サイドバー）
