@@ -20,6 +20,7 @@
 -シンタックスハイライトのテーマを変更しました。またhighlight.jsのロード方法も変更しました。
 -記法タグでの「google」や「wikipedia」のリンク先をhttpsに変更しました。GoogleのリンクQueryも少し変更しました。
 -【テーマ】配色カスタマイズ画面で、色を濃くしたり明るくしたりできるようにしました。((色を薄くまたは暗くしかできなかったという（苦笑）))
+-【テーマ】オプションによる配置変更などが実現可能な機能をつけました。((satsuki-multisideといったフォルダ（テーマ）を作らなくて済むようになりました。))
 -【テーマ】あらゆる出力から{<input type="submit">, <input type="button">}を廃止しました。
 -【テーマ】satsuki2系テーマで、サイドバーサイズを固定にしました。
 -【テーマ】satsuki2-multiside テーマを廃止してウィンドウ横幅によりマルチサイドバーにする satsuki2-resp に変更しました。
